--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Apply ML-ORB patch
       run: |
-        bash patch.sh $(pwd)/lammps
+        bash patch/patch.sh $(pwd)/lammps
 
     - name: Build LAMMPS with ML-ORB
       run: |
