--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -43,6 +43,6 @@ jobs:
         
     - name: Run a simple LAMMPS input script (for testing)
       run: |
-        cd lammps/build
-        cp ../src/ML-ORB/orb_driver.py .
-        ./lmp -in ../examples/in.BaTiO3  
+        cd examples 
+        cp ../lammps/src/ML-ORB/orb_driver.py .
+        ../lammps/build/lmp -in in.BaTiO3  
