--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -22,7 +22,8 @@ jobs:
         source orb-models/bin/activate
         pip install --upgrade pip
         pip install orb-models
-        pip install "pynanoflann@git+https://github.com/dwastberg/pynanoflann#egg=af434039ae14bedcbb838a7808924d6689274168",
+        pip install "pynanoflann@git+https://github.com/dwastberg/pynanoflann#egg=af434039ae14bedcbb838a7808924d6689274168"
+        pip install ase
   
     - name: Download LAMMPS source code
       run: |
