--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -44,6 +44,7 @@ jobs:
         
     - name: Run a simple LAMMPS input script (for testing)
       run: |
+        source orb-models/bin/activate
         cd example
         cp ../lammps/src/ML-ORB/orb_driver.py .
         ../lammps/build/lmp -in in.BaTiO3  
